[tool.poetry]
name = "file_sorter"
version = "0.1.0"
description = ""
authors = ["oyzybareva <oyzybareva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
tk = "^0.1.0"
pyinstaller = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
